# django-template

./: .dockerignore  .gitignore  Dockerfile  compose.yaml  entrypoint.sh  nginx.conf  pyproject.toml  requirements.txt  supervisord.conf
src/: .env.sample
src/authapp/: admin.py  forms.py  models.py  urls.py  views.py
src/authapp/management/commands/: create_admin.py  flush_loki_logs.py
src/authapp/migrations/: 0001_initial.py
src/authapp/templates/authapp/: login.html  signup.html
src/config/: celery.py  urls.py  wsgi.py
src/config/settings/: base.py  dev.py
src/templates/: 404.html
src/utils/: constants.py  general.py  validators.py
